--- a/src/.env
+++ b/src/.env
@@ -3,4 +3,10 @@ SNOWFLAKE_USER=your_user
 SNOWFLAKE_ROLE=your_role
 SNOWFLAKE_PRIVATE_KEY_PATH=/path/to/your/private_key.p8
 
+RESOURCES_PATH =src/resources
+UTILS_PATH=src/utils
+TEMPLATES_PATH=src/templates
+DEPLOY_PATH=src
+GENERATED_PATH=src/generated
+
 MODE=DEV
